--- a/style.css
+++ b/style.css
@@ -3,14 +3,34 @@
     width: 100%;
 }
 
-#gameBoard button {
+#gameBoardViews__LaunchGame button {
     margin-top: 10px;
+    padding: 8px;
+    border-radius: 12px;
+    border: none;
+    background-color: rgb(255, 166, 0);
+    color: #fff;
+}
+
+#gameBoardViews__LaunchGame input {
+    padding: 8px;
+    border-radius: 12px;
+    border: none;
 }
 
 #gameBoardViews__LaunchGame {
     padding: 10px;
     background-color: rgb(200, 252, 252);
     min-height: 400px;
+}
+
+#gameBoardViews__PlayerControls button {
+    width: 20px;
+    height: 20px;
+    border: none;
+    border-radius: 2px;
+    background-color: gray;
+    color: #fff;
 }
 
 #gameBoardViews__HeroVariants, #gameBoardViews__LevelVariants {
